<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.TweetActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:visible="true"/>

    <item
        android:id="@+id/socialList"
        android:title="@string/social_messages"
        android:visible="true"/>

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:visible="true"/>

    <item
        android:id="@+id/plus_sign"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/plus_sign"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="always"
        android:title="@string/refresh"/>


    <item
        android:id="@+id/action_pause"
        android:icon="@android:drawable/ic_media_pause"
        app:showAsAction="always"
        android:title="@string/pause"/>

    <item
        android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="always"
        android:title="@string/play"/>


</menu>