<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetEmail"
        android:id="@+id/homeEmail"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#be6c6c" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetContact"
        android:id="@+id/homeContact"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/homeEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#be6c6c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetCount"
        android:textSize="20dp"
        android:id="@+id/homeCount"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="140"
        android:id="@+id/homeMessage"
        android:hint="@string/tweetMessage"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/homeTweet"
        android:layout_alignStart="@+id/homeContact"
        android:layout_marginTop="87dp"
        android:layout_above="@+id/homeDate"
        android:layout_alignEnd="@+id/homeContact"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textColorHint="#c55a5a"
        android:background="@color/colorPrimaryDark"
        android:selectAllOnFocus="false"
        android:gravity="top"
        android:elegantTextHeight="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/homeDate"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:layout_above="@+id/homeContact"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/tweetDate"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tweetUser"
        android:textSize="15dp"
        android:id="@+id/homeUser"
        android:layout_toStartOf="@+id/homeTweet"
        android:layout_below="@+id/homeCount"
        android:layout_above="@+id/homeMessage"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitTweet"
        android:id="@+id/homeTweet"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#be6c6c" />
</RelativeLayout>