<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.TweetActivitySignup">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupMyTweet"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:id="@+id/signbut"
        android:backgroundTint="#be6c6c" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/signfn"
        android:hint="@string/signfirstName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/signlastName"
        android:ems="10"
        android:id="@+id/signln"
        android:layout_below="@+id/signfn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signem"
        android:hint="@string/signEmail"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/signln"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signpass"
        android:hint="@string/signPassword"
        android:layout_below="@+id/signem"
        android:layout_alignEnd="@+id/signem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

</RelativeLayout>