<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.TweetActivityLogin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/logEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/loginEmail"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/logPass"
        android:layout_below="@+id/logEmail"
        android:layout_alignEnd="@+id/logEmail"
        android:layout_marginTop="69dp"
        android:hint="@string/loginPassword"
        android:textColor="#fcf8f8"
        android:textColorHint="#c55a5a" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/logbut"
        android:layout_below="@+id/logPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:backgroundTint="#be6c6c" />
</RelativeLayout>