<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.TweetActivityWelcome"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeMessage"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40dp"
        android:textColor="@color/background_material_light"
        android:layout_marginTop="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:id="@+id/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSubMsg"
        android:textSize="20dp"
        android:textColor="@color/background_material_light"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/subheader" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_SignBut"
        android:id="@+id/welcomeSignup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#be6c6c" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_LogBut"
        android:id="@+id/welcomeLogin"
        android:layout_alignBottom="@+id/welcomeSignup"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#be6c6c"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/back"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/welcomeLogin"
        android:visibility="invisible" />
</RelativeLayout>
